Some typo corrections

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <ul>
                 <li>Standardisation dans Unicode version 6.0 en Octobre 2010
-                <li>855 emoji spécifié, documenté et encodé par le Consortium Unicode
+                <li>855 emoji spécifiés, documentés et encodés par le Consortium Unicode
                     <ul>
                         <li>Avec mapping pour les emoji Japonais existants</li>
                         <li>Tour de Tokyo 🗼 mais pas Tour Eiffel 😒</li>
@@ -261,7 +261,7 @@
                 <li>World Emoji Day le 17 Juillet 🎉
                 <li>Emojimovie: Express Yourself, au cinéma en 2017 🎥
                 <li>Supporté partout ! Saisie super simple et claviers dédiés sur mobile ⌨</li>
-                <li>Emojipedia.org fait 14 millions de page vue par mois</li>
+                <li>Emojipedia.org fait 14 millions de pages vues par mois</li>
             </ul>
         </section>
 
@@ -297,7 +297,7 @@
                         <li>Français : 🎅 => 🎅, père, noël</li>
                     </ul>
                 </li>
-                <li>Donc rechercher "santa" remonte les document avec 🎅 et inversement.</li>
+                <li>Donc rechercher "santa" remonte les documents avec 🎅 et inversement.</li>
             </ul>
         </section>
 
@@ -780,7 +780,7 @@ $E_Modifier ($Extend | $Format | $ZWJ)*;
                     </ul>
 
                 </li>
-                <li>Un effort en court pour aider à la réalisation de plugin Ingest</li>
+                <li>Un effort en cours pour aider à la réalisation de plugin Ingest</li>
             </ul>
         </section>
 
@@ -797,7 +797,7 @@ $E_Modifier ($Extend | $Format | $ZWJ)*;
         </section>
 
         <section>
-            <h2 class="no-caps">Quelques flags utile</h2>
+            <h2 class="no-caps">Quelques flags utiles</h2>
 
             <ul>
                 <li><code>licenseHeaders.enabled</code>
