--- a/index.html
+++ b/index.html
@@ -335,25 +335,21 @@
         </section>
 
         <section>
-            <img src="images/pizza-yelp-lausanne.png" alt="Yelp">
-        </section>
-        <section>
             <img src="images/github.png" alt="Github">
         </section>
         <section>
             <img src="images/twitter.png" alt="Twitter">
         </section>
-
-
-        
         <section>
-            <h3>Conclusion : le père noël n'existe pas 😨</h3>
-
-            <p class="fragment">Ou alors la recherche de Twitter est NULLE <br ><br >🎅 🎅 🎅</p>
+            <img src="images/pizza-yelp-lausanne.png" alt="Yelp">
         </section>
 
         <section>
-            <h2 class="no-caps">Faire mieux que Twitter</h2>
+            <h2 class="no-caps">How to search like YELP</h2>
+        </section>
+
+        <section>
+            <h2 class="no-caps">Standards to the rescue</h2>
 
             <ul>
                 <li>Unicode spécifie <a href="http://unicode.org/reports/tr51/#Searching">comment faire de la recherche</a> (TR51)
