--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <section>
             <h2>The journey to get pizzas while looking for 🍕</h2>
 
+            <p><img src="images/ElasticsearchHorizontalTextWhite.svg" alt="Elasticsearch"></p>
             <h4>A story about emoji and Elasticsearch</h4>
         </section>
 
@@ -190,11 +191,11 @@
             <h2 class="no-caps">□ Support today □</h2>
 
             <ul>
-                <li>Black and white only ☃️, colors, tofu... □</li>
+                <li>Black and white only ☃️, colors, tofu □...</li>
                 <li>Apple iOS and OSX are leaders, it works in all apps</li>
                 <li>Android since 4.1</li>
                 <li>Microsoft Windows 10 (partial in 8 and 7)</li>
-                <li>Linux 🐧... <s>Build it yourself!</s> Ubuntu 18.04 native support</li>
+                <li>Linux 🐧... <s>Build it yourself!</s> Ubuntu 18.04 native</li>
                 <li><a href="http://caniemoji.com/">caniemoji.com</a></li>
             </ul>
         </section>
@@ -262,10 +263,12 @@
         <section>
             <h2 class="no-caps">Modifiers</h2>
 
-            <p  style="position: absolute; right: 0; margin-top: 100px; font-size: 170px">🤘🏽</p>
+            <p  style="position: absolute; right: 0; margin-top: 90px;">
+                <img src="images/horns-colors.gif" alt="Horns" style="width: 300px">
+            </p>
             <ul>
                 <li>
-                    Fitzpatrick modifiers to change the skin tone:
+                    Fitzpatrick modifiers to change the skin tone and hair color:
 
                     <ol>
                         <li>🤘 <em>U+1F918</em>
@@ -325,7 +328,7 @@
                 <li>Word of the Year 2015 in Oxford English Dictionary: 😂
                 <li>World Emoji Day on 17 of July 🎉
                 <li>Emojimovie: Express Yourself, in theaters last year 🎥
-                <li>Suppoted everywhere, very easy to type ⌨</li>
+                <li>Supported everywhere, very easy to type ⌨</li>
                 <li><a href="https://emojipedia.org/stats/">Emojipedia.org</a> got an average of 22 million page view per month 💥</li>
             </ul>
         </section>
@@ -352,23 +355,29 @@
             <h2 class="no-caps">Standards to the rescue</h2>
 
             <ul>
-                <li>Unicode spécifie <a href="http://unicode.org/reports/tr51/#Searching">comment faire de la recherche</a> (TR51)
-                <li>Chaque emoji doit être indexé avec ses annotations, et cela dans toutes les langues cibles
+                <li>Unicode has emoji search recommendations <a href="http://unicode.org/reports/tr51/#Searching">in TR51</a>
+                <li>Each emoji must be indexed with it's annotations
+                <li><a href="http://www.unicode.org/cldr/charts/32/annotations/romance.html">Annotations</a> are part of CLDR
             </ul>
         </section>
 
         <section>
-            <h2 class="no-caps">Faire mieux que Twitter</h2>
+            <h2 class="no-caps">Official annotations</h2>
 
             <ul>
-                <li>L'emoji 🎅 ça donne :
+                <li>With 🍕:
                     <ul>
-                        <li>Anglais : celebration, christmas, santa</li>
-                        <li>Français : père, noël</li>
+                        <li>English: <em>pizza</em>, cheese, slice</li>
+                        <li>French: <em>pizza</em>, fromage, tranche</li>
                     </ul>
                 </li>
-                <li>Donc rechercher "santa" remonte les documents avec 🎅 et inversement.</li>
             </ul>
+
+            <h5 class="no-caps">We have to index "pizza" <br>when the document contains a 🍕 emoji</h5>
+        </section>
+
+        <section>
+            <img src="images/ElasticsearchHorizontalTextWhite.svg" alt="Elasticsearch">
         </section>
 
         <section>
