--- a/index-2021.html
+++ b/index-2021.html
@@ -166,7 +166,7 @@ given current trends. For this, use
                     <ul>
                         <li>Les pictogrammes Japonais</li>
                         <li>Quelques nouveaux</li>
-                        <li>Certains icônes déjà dans Unicode inclus</li>
+                        <li>Certains icônes déjà dans Unicode</li>
                     </ul>
                 </li>
             </ul>
@@ -182,7 +182,7 @@ given current trends. For this, use
             <ul>
                 <li>Ajouté dans l'iPhone en 2008, au Japon uniquement 🇯🇵
                 <li>Support complet en 2011
-                <li>Tous le monde à suivi, d'Android à Windows</li>
+                <li>Tout le monde a suivi, d'Android à Windows</li>
             </ul>
         </section>
 
@@ -326,7 +326,7 @@ GET meal/_search
             <br>
             <br>
             <h4 class="no-caps">Nous devons indexer "pizza" <br>quand il y a un emoji 🍕</h4>
-            <h4 class="no-caps fragment">C'est le boulot des synonymes!</h4>
+            <h4 class="no-caps fragment">C'est le boulot des synonymes !</h4>
         </section>
 
         <section>
@@ -416,6 +416,7 @@ GET _analyze
 
             <ul>
                 <li>Le CLDR fourni les annotations dans toutes les langues</li>
+                <li>Unicode Common Locale Data Repository</li>
                 <li>Je fournis juste les fichiers de synonymes déjà prêt :</li>
             </ul>
 
@@ -876,7 +877,9 @@ O:-D => 😇
             </p>
 
             <p class="fragment">
-                Des informations d'intention / émotion en plus.
+                Des informations d'intention / émotion en plus<br>
+                =<br>
+                Une meilleure expérience de recherche
             </p>
         </section>
 
@@ -921,6 +924,7 @@ O:-D => 😇
                 - https://emojipedia.org/
                 - https://issues.apache.org/jira/browse/LUCENE-8366
                 - https://www.unicode.org/reports/tr51/tr51-18.html
+                - https://meowni.ca/posts/emoji-emoji-emoji/
                 - https://twitter.com/damienalexandre
             </script>
         </section>
