Fix some little typos

--- a/index-2021.html
+++ b/index-2021.html
@@ -191,7 +191,7 @@ given current trends. For this, use
             <h2 class="no-caps">□ Support aujourd'hui □</h2>
 
             <ul>
-                <li>Apple iOS et OSX</li>
+                <li>Apple iOS et macOS</li>
                 <li>Android</li>
                 <li>Windows 10</li>
                 <li>Linux 🐧 Ubuntu 18.04</li>
@@ -417,7 +417,7 @@ GET _analyze
             <ul>
                 <li>Le CLDR fourni les annotations dans toutes les langues</li>
                 <li>Unicode Common Locale Data Repository</li>
-                <li>Je fournis juste les fichiers de synonymes déjà prêt :</li>
+                <li>Je fournis juste les fichiers de synonymes déjà prêts :</li>
             </ul>
 
             <p><a href="https://github.com/jolicode/emoji-search/">https://github.com/jolicode/emoji-search/</a></p>
@@ -461,7 +461,7 @@ GET _analyze
             <img src="images/raibowflag.png" alt="rainbow flag" style="position: absolute; right: 0; margin-top: 100px">
             <ul>
                 <li>
-                    Séquence ZWJ pour afficher un drapeau arc en ciel :
+                    Séquence <abbr title="Zero Width Joiner">ZWJ</abbr> pour afficher un drapeau arc en ciel :
 
                     <ol>
                         <li>🏳 <em>U+1F3F3</em></li>
@@ -636,7 +636,7 @@ GET _analyze
 }</code></pre>
 
             <p class="fragment">Tokens <em>🤘🏽</em> <em>horns</em> <em>medium</em> <em>skin</em> <em>tone</em><br>
-                Supporté aussi mais synonyme a affiner</p>
+                Supporté aussi mais synonyme à affiner</p>
         </section>
 
         <section>
@@ -890,7 +890,7 @@ O:-D => 😇
                 <li>Les emoji sont des lettres comme les autres 🔠</li>
                 <li>Leur recherche se base sur des synonymes 👥</li>
                 <li>Le CLDR produit ses annotations pour nous 📝</li>
-                <li>Un fichier de synonyme tout prêt disponible ✅</li>
+                <li>Un fichier de synonymes tout prêt disponible ✅</li>
                 <li>Il y a plein de combinaisons possibles ♾️</li>
                 <li>Supportez les emoji partout (sauf les mots de passe) 🔒</li>
             </ul>
